# miku

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES  compose.yml  flake.nix  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-check.yml
crates/miku/: Cargo.toml
crates/miku-app/: Cargo.toml
crates/miku-app/src/: application.rs  composition.rs  lib.rs  ports.rs  workspace.rs
crates/miku-cache-valkey/: Cargo.toml
crates/miku-cache-valkey/src/: lib.rs
crates/miku-domain/: Cargo.toml
crates/miku-domain/src/: lib.rs  workspace.rs
crates/miku-index-memory/: Cargo.toml
crates/miku-index-memory/src/: lib.rs  search.rs
crates/miku-index-postgres/: Cargo.toml
crates/miku-index-postgres/migrations/: 0001_init_index.sql
crates/miku-index-postgres/src/: lib.rs
crates/miku-index-sqlite/: Cargo.toml
crates/miku-index-sqlite/examples/: inspect.rs
crates/miku-index-sqlite/migrations/: 0001_init_index.sql
crates/miku-index-sqlite/src/: lib.rs
crates/miku-index-turso/: Cargo.toml
crates/miku-index-turso/examples/: inspect.rs
crates/miku-index-turso/src/: lib.rs
crates/miku-indexer/: Cargo.toml
crates/miku-indexer/src/: lib.rs  mentions.rs
crates/miku-markdown/: Cargo.toml
crates/miku-markdown/src/: lib.rs
crates/miku-vault/: Cargo.toml
crates/miku-vault/src/: lib.rs
crates/miku/src/: http.rs  http_api.rs  indexer.rs  lib.rs  openapi.rs  workspace_api.rs
docs/: api_design_spec.md  architecture.md  backend-layering-plan.md  dataflow.md  dataflow_v2.md  dataflow_v3.md  decisions.md  frontend_design.md  performance-baseline.md  plan.md  product.md  review_and_simulation.md  roadmap_2.0.md  runtime-workflow.md  setup.md  unlinked-mentions-plan.md  ux-polish-tasks.md  ux2-issue-matrix.md
docs/adr/: 0001-fts-english.md  0004-rename-delete-assets.md  0006-watcher-at-scale.md  0007-frontend-rendering.md  0008-theme-switching.md  0009-index-store-composition.md  0010-workspace-crate-boundaries.md  0011-local-tier-index.md  0011-local-tier-turso-index.md  0012-scale-tier-postgres-valkey.md  0013-crates-io-release-surface.md  0014-native-local-backend.md  0014-native-turso-07-local-backend.md  0015-derived-unlinked-mention-index.md  0016-sqlite-local-index.md  0017-composed-projections.md  0017-web-markdown-workspace.md  README.md
docs/lessons/: pitfalls.md
docs/ux/: 0.0.3-workflow-simulation.md  quartz-uiux-plan.md
experiments/: README.md  compare_vault_models.py  hybrid_projection_probe.py
miku-web/: README.md  index.html  package.json  vite.config.ts
miku-web/src/: MarkdownReader.test.ts  MarkdownReader.tsx  WorkspaceTree.tsx  api.test.ts  api.ts  app.tsx  fixtures.ts  main.tsx  noteRoute.ts  styles.css  ui.test.ts  ui.ts  workspace.test.ts  workspace.ts
miku-web/src/app/: App.tsx
miku-web/src/components/workspace/: WorkspaceNotice.tsx  WorkspaceTree.tsx  icons.tsx
miku-web/src/features/markdown/: MarkdownEditor.tsx  MarkdownReader.test.ts  MarkdownReader.tsx  prism.ts
miku-web/src/features/workspace/: WorkspaceApp.tsx  WorkspaceComponents.tsx  api.test.ts  api.ts  noteRoute.test.ts  noteRoute.ts  state.test.ts  state.ts
miku-web/src/shared/: ui.test.ts  ui.ts
miku_docs/: Changelog.md  Features.md  Index.md  Sandbox.md  Usage.md  api.md  architecture.md  dataflow.md  decisions.md  performance-baseline.md  product.md  roadmap-0.0.3-trilium-like-ux.md  runtime-workflow.md  setup.md  topcoat-investigation.md
miku_docs/adr/: 0001-fts-english.md  0002-markdown-wikilink-grammar.md  0003-write-conflicts-auth.md  0004-rename-delete-assets.md  0005-nav-explorer.md  0006-watcher-at-scale.md  0007-frontend-rendering.md  0008-theme-switching.md  0009-index-store-composition.md  0009-pin-tailwind-over-mui.md  0010-workspace-crate-boundaries.md  0011-local-tier-index.md  0012-scale-tier-postgres-valkey.md  0013-crates-io-release-surface.md  0014-native-local-backend.md  0015-derived-unlinked-mention-index.md  0016-sqlite-local-index.md  0017-web-markdown-workspace.md  0018-composed-projections.md  README.md
miku_docs/pitfalls/: topcoat-web-rewrite.md
miku_docs/ux/: 0.0.3-decision-register.md
scripts/: api_benchmark.py  blackbox.py  ci.py  compose_experiment.py  dev.py  index_scale_test.py  orchestrate.py  reader_shell_contract.py  test_blackbox.py  test_reader_shell.py  ux_browser.py  ux_smoke.py  ux_soak.py
src/: content_search.rs  http.rs  indexer.rs  lib.rs  main.rs  main_tests.rs  openapi.rs  routes.rs  workspace_api.rs
src/fixtures/indexer/: nul_invalid.md
src/templates/: _icons.html  _nav_macro.html  base.html  conflict.html  edit.html  folder.html  nav_children.html  page.html  reader_fragment.html  search.html  tag.html  tags.html
static/: miku.css  miku.js  tailwind.generated.css  tailwind.input.css
