[package]
name = "miku"
version = "0.0.2"
authors = ["azusachino <azusachino@duck.com>"]
edition = "2021"
description = "A filesystem-owned personal Markdown wiki with browser editing and background indexing for backlinks, tags, and full-text search."
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/azusachino/miku"
keywords = ["markdown", "wiki", "notes", "backlinks", "fulltext"]
categories = ["text-processing", "web-programming"]

# `cargo install miku` builds the default memory/Tantivy runtime; sqlite,
# postgres, and valkey are opt-in compatibility or scale profiles.
# are opt-in Cargo features. Keep repo-internal docs/config/CI out of the package.
include = [
  "src/**/*",
  "static/**/*",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE",
]

[workspace]
members = [
  "crates/miku-domain",
  "crates/miku-vault",
  "crates/miku-markdown",
  "crates/miku-indexer",
  "crates/miku-index-memory",
  "crates/miku-app",
  "crates/miku-index-postgres",
  "crates/miku-index-sqlite",
  "crates/miku-cache-valkey",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/azusachino/miku"

[workspace.dependencies]
async-trait = "0.1"
aho-corasick = "1"
comrak = { version = "0.52", default-features = false }
lazy_static = "1"
regex = "1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = "5"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "sync"] }
thiserror = "2"

[dependencies]
anyhow = "1"
miku-domain = { version = "0.0.2", path = "crates/miku-domain" }
miku-app = { version = "0.0.2", path = "crates/miku-app", default-features = false }
miku-markdown = { version = "0.0.2", path = "crates/miku-markdown" }
miku-indexer = { version = "0.0.2", path = "crates/miku-indexer" }
miku-vault = { version = "0.0.2", path = "crates/miku-vault" }

# async runtime
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "net",
] }
tokio-stream = { version = "0.1", features = ["sync"] }
grep-regex.workspace = true
grep-searcher.workspace = true
ignore.workspace = true
utoipa.workspace = true

# web
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "trace"] }
minijinja = { version = "2", features = ["loader"] }

# Templates + static assets are baked into the binary so `cargo install miku`
# runs from any directory (the miku_docs/ content dir stays CWD/vault-relative).
# debug-embed embeds in debug builds too, so a moved binary works in dev as well.
rust-embed = { version = "8", features = ["debug-embed"] }
mime_guess = "2"

# filesystem watcher (background indexer)
notify = "7"

# serialization + time
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# hashing
sha2 = "0.10"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }

[features]
default = ["memory"]
memory = ["miku-app/memory"]
sqlite = ["miku-app/sqlite"]
postgres = ["miku-app/postgres"]
valkey = ["miku-app/valkey"]
postgres-valkey = ["postgres", "valkey"]

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
unused_async = "allow"
too_many_lines = "allow"
cast_possible_wrap = "allow"
if_not_else = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_map_or = "allow"
map_unwrap_or = "allow"
ptr_arg = "allow"
case_sensitive_file_extension_comparisons = "allow"
non_std_lazy_statics = "allow"
needless_pass_by_value = "allow"

[profile.release]
strip = true
lto = true
codegen-units = 1
