[workspace]
members = [
  "crates/miku",
  "crates/miku-domain",
  "crates/miku-vault",
  "crates/miku-markdown",
  "crates/miku-indexer",
  "crates/miku-index-memory",
  "crates/miku-app",
  "crates/miku-index-postgres",
  "crates/miku-index-sqlite",
  "crates/miku-cache-valkey",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/azusachino/miku"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
aho-corasick = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
comrak = { version = "0.52", default-features = false }
lazy_static = "1"
notify = "7"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
utoipa = "5"
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
unused_async = "allow"
too_many_lines = "allow"
cast_possible_wrap = "allow"
if_not_else = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_map_or = "allow"
map_unwrap_or = "allow"
ptr_arg = "allow"
case_sensitive_file_extension_comparisons = "allow"
non_std_lazy_statics = "allow"
needless_pass_by_value = "allow"

[profile.release]
strip = true
lto = true
codegen-units = 1
