[project]
name = "miku-scripts"
version = "0.0.1"
description = "Project automation and dev scripts for miku (run via `uv run`)."
requires-python = ">=3.12"
dependencies = [
    "pytest>=8,<9",
    "ruff>=0.8,<1",
]

# Dev/automation scripting lives here and runs via `uv run python scripts/<x>.py`
# instead of bash glue. The Rust crate is the product; this is tooling only.
[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["test_*.py"]
