[package]
name = "miku-app"
version = "0.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Backend-neutral application index API for Miku"

[dependencies]
async-trait.workspace = true
miku-domain = { version = "0.0.2", path = "../miku-domain" }
miku-vault = { version = "0.0.2", path = "../miku-vault" }
miku-index-memory = { version = "0.0.2", path = "../miku-index-memory", optional = true }
miku-index-postgres = { version = "0.0.2", path = "../miku-index-postgres", optional = true }
miku-index-sqlite = { version = "0.0.2", path = "../miku-index-sqlite", optional = true }
miku-cache-valkey = { version = "0.0.2", path = "../miku-cache-valkey", optional = true }
sqlx = { version = "0.8.6", optional = true, features = ["postgres", "runtime-tokio-rustls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror = "2"

[features]
default = ["memory", "sqlite"]
memory = ["dep:miku-index-memory"]
sqlite = ["dep:miku-index-sqlite"]
postgres = ["dep:miku-index-postgres", "dep:sqlx"]
valkey = ["dep:miku-cache-valkey"]

[dev-dependencies]
miku-index-memory = { version = "0.0.2", path = "../miku-index-memory" }
tempfile = "3"
tokio.workspace = true
