[package]
name = "miku-cache-valkey"
version = "0.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Optional Valkey cache primitives for Miku"

[dependencies]
redis = { version = "0.27", features = ["connection-manager", "tokio-comp"] }
serde.workspace = true
serde_json.workspace = true
