[package]
name = "miku-index-memory"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-memory reference IndexStore for Miku"

[dependencies]
async-trait.workspace = true
miku-domain = { path = "../miku-domain" }
miku-indexer = { path = "../miku-indexer" }
serde_json.workspace = true
tokio.workspace = true
