[package]
name = "miku-index-memory"
version = "0.0.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "In-memory reference IndexStore for Miku"

[dependencies]
async-trait.workspace = true
miku-domain = { version = "0.0.3", path = "../miku-domain" }
miku-indexer = { version = "0.0.3", path = "../miku-indexer" }
serde_json.workspace = true
tokio.workspace = true
tantivy = "0.22"
