[package]
name = "miku-index-postgres"
version = "0.0.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Postgres IndexStore implementation for Miku"

[dependencies]
async-trait.workspace = true
miku-domain = { version = "0.0.3", path = "../miku-domain" }
miku-indexer = { version = "0.0.3", path = "../miku-indexer" }
serde_json.workspace = true
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
