[package]
name = "miku-index-sqlite"
version = "0.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite IndexStore implementation for Miku"

[dependencies]
async-trait.workspace = true
miku-domain = { version = "0.0.2", path = "../miku-domain" }
miku-indexer = { version = "0.0.2", path = "../miku-indexer" }
serde_json.workspace = true
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-tokio", "migrate", "macros"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
