[package]
name = "miku-index-turso"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Durable local Turso index store for Miku"

[dependencies]
async-trait.workspace = true
miku-domain = { path = "../miku-domain" }
miku-index-memory = { path = "../miku-index-memory" }
serde_json.workspace = true
turso = "0.7.0"

[dev-dependencies]
tokio.workspace = true
