[package]
name = "miku-index-turso"
version = "0.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Durable local Turso index store for Miku"

[dependencies]
async-trait.workspace = true
miku-domain = { version = "0.0.2", path = "../miku-domain" }
miku-index-memory = { version = "0.0.2", path = "../miku-index-memory" }
serde_json.workspace = true
tokio.workspace = true
turso = { version = "0.7.0", default-features = false, features = ["fts"] }

[dev-dependencies]
tokio.workspace = true
