[package]
name = "miku-markdown"
version = "0.0.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Markdown parsing and rendering helpers for Miku"

[dependencies]
comrak.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
